Change 'Individual' div ID to 'team'
Updated the 'Individual' div ID to 'team' for consistency.

--- a/2025team.html
+++ b/2025team.html
@@ -21,7 +21,7 @@
                 <li><a href="alltime.html">  All Time </a></li>
             </ul>
         </nav>
-        <div id="Individual" class="hero">
+        <div id="team" class="hero">
         </div>
     <div class="flow">
         <h2> 2025 Team </h2>
