Enhance HTML with meta description tag
Added a meta description for SEO purposes.

--- a/2025individual.html
+++ b/2025individual.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
+        <meta name ="description" content = "How Statistics Impact Baseball offers you the chance to learn and see how statistics impact the game of baseball by providing real accurate statistics from the most recent season as well as all time to see how they influence the game around us.">
     </head>
     <body>
         <div id="wrapper">
@@ -53,5 +54,7 @@
             <a href="mailto:jdebeli1@asu.edu">jdebeli1@asu.edu</a>
         </footer>    
         </div>
-</body>
+    </body>
 </html>
+
+
