Fix HTML structure and update hero section ID

--- a/alltime.html
+++ b/alltime.html
@@ -22,7 +22,7 @@
                 <li><a href="alltime.html">  All Time </a></li>
             </ul>
         </nav>
-        <div id="homehero" class="hero">
+        <div id="general" class="hero">
         </div>
         <div class="flow">
         <h2> All Time Leaders </h2>
