--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <li><a href="alltime.html">  All Time </a></li>
             </ul>
         </nav>
-        <div id="general" class="hero">
+        <div id="general" class="general
+            ">
         </div>
         <div class="flow">
         <h2> General & Common Baseball Acronyms </h2>
@@ -56,3 +57,4 @@
         </div>
     </body>
 </html>
+
