Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                 <li><a href="alltime.html">  All Time </a></li>
             </ul>
         </nav>
-        <div id="general" class="general
-            ">
+        <div id="general" class="general">
         </div>
         <div class="flow">
         <h2> General & Common Baseball Acronyms </h2>
@@ -57,4 +56,5 @@
         </div>
     </body>
 </html>
+
 
