--- a/index.html
+++ b/index.html
@@ -1,66 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Pacific Trails Resort</title>
+        <title>How Statistics Impact Baseball</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="pacific.css">
-        <meta name ="description" content = "The Pacific Trails Resort offers lots of yurts and activities for you to stop and explore at, book your reservation now!">
+        <link rel="stylesheet" href="styles.css">
+        <meta name ="description" content = "How Statistics Impact Baseball offers you the chance to learn and see how statistics impact the game of baseball by providing real accurate statistics from the most recent season as well as all time to see how they influence the game around us.">
     </head>
     <body>
         <div id="wrapper">
         <header>
             <h1>
-                <a href="index.html">Pacific Trails Resort</a>
+                <a href="index.html">How Statistics Impact Baseball</a>
             </h1>
         </header>
         <nav> 
             <ul>
                 <li><a href="index.html">  Home </a></li>
-                <li><a href="yurts.html">  Yurts </a></li>
-                <li><a href="activities.html">  Activities </a></li>
-                <li><a href="reservations.html">  Reservations </a></li>
+                <li><a href="2025team.html">  2025 Team </a></li>
+                <li><a href="2025individual.html">  2025 Individual </a></li>
+                <li><a href="alltime.html">  All Time </a></li>
             </ul>
         </nav>
-        <div id="homehero" class="hero">
+        <div id="general" class="general">
         </div>
         <div class="flow">
-        <h2> Enjoy Nature in Luxury </h2>
+        <h2> General & Common Baseball Acronyms </h2>
         <p> 
-            <span class="resort">Pacific Trails Resort</span> offers a special lodging experience on the California North Coast
-            with panoramic views of the Pacific Ocean. Your stay at Pacific Trails Resort includes a
-            sumptuously appointed private yurt and a cooked-to-order breakfast each morning.
+            <span class="general">How Statistics Impact Baseball</span> offers you the chance to learn and see how statistics impact the game of baseball by providing real accurate statistics from the most recent season as well as all time to see how they influence the game around us.
         </p>
-        <video controls "controls" width"320" height="240">
-            <source src="PacificTrailsResort.mp4" type="video/mp4">
-            <source src="PacificTrailsResort.ogv" type="video/ogv">
-            <a href="PacificTrailsResort.mov">Your browser does not support the video tag. View the video here.</a>
-        </video>
         <ul>
             <li>
-                Relax in our lodge while enjoying complimentary appetizers and beverages
+                AVG: Batting Average
             </li>
             <li>
-                Savor nightly fine dining with an ocean view
+                OBP: On Base Percentage
             </li>
             <li>
-                Unwind in the heated outdoor pool and whirlpool
-            </li>
-            <li>
-                Explore the coast on your own or join our guided tours
+                OPS: On Base Plus Slugging
             </li>
         </ul>
         <div id="contact">
             <p>
-                <span class="resort">Pacific Trails Resort</span><br>
-                12010 Pacific Trails Road<br>
-                Zephyr, CA 95555<br><br>
-                888-555-5555<br><br>
+                <span class="general">How Statistics Impact Baseball</span><br>
+                25 Main Street<br>
+                Cooperstown, NY 13326<br><br>
+                888-425-5633<br><br>
             </p>
         </div>
 
         <footer>
-            Copyright © 2022 Pacific Trails Resort<br>
+            Copyright © 2025 How Statistics Impact Baseball<br>
             <a href="mailto:jdebeli1@asu.edu">jdebeli1@asu.edu</a>
         </footer>    
         </div>
